updated order create

--- a/POS_Accessories/appsettings.Development.json
+++ b/POS_Accessories/appsettings.Development.json
@@ -13,7 +13,7 @@
     "Audience": "https://localhost:7152/"
   },
   "ConnectionStrings": {
-    "DevConnection": "Data Source=122.175.6.200,1486;Initial Catalog=AccessoriesDB;Integrated Security=False;Persist Security Info=True;User ID=sa;Password=angel#123;"
+    "DevConnection": "Data Source=184.168.47.10;Initial Catalog=AngleSims;Integrated Security=False;Persist Security Info=True;User ID=anil;Password=anil@123;"
   },
   "PageNumber": 1,
   "PageSize": 10,
